feat:add mobile and table img size and font size

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -10,7 +10,7 @@
         <h1 class="maintitle">CSS Bayan</h1>
         <div class="memes">
 <div class="memecontanier">
-    <input type="radio" name="meme1" id="meme1" class="inp" />
+    <input type="radio" name="meme1" id="meme1" class="inp" checked />
         <label for="meme1" class="title">I'm reading</label>
         
         <div class="meme1b des">
